fixed name wrapping css

--- a/static/styles/css/thanks.css
+++ b/static/styles/css/thanks.css
@@ -110,7 +110,7 @@ a {
   }
   .about--greeting {
     height: 55px;
-    width: 85%;
+    width: 90%;
     margin-bottom: 1rem;
   }
   .about--greeting--hello {
@@ -214,7 +214,7 @@ a {
     padding: 20% 15% 10% 15%;
   }
   .about--greeting {
-    width: 90%;
+    width: 95%;
     margin-bottom: 1.5rem;
   }
   .about--greeting--hello {
@@ -474,7 +474,7 @@ a {
     padding: 10% 15%;
   }
   .about--greeting {
-    width: 60%;
+    width: 65%;
     -webkit-transform: translateX(-100px);
             transform: translateX(-100px);
   }
@@ -602,7 +602,7 @@ a {
     margin: 0 20px;
   }
   .about--greeting {
-    width: 550px;
+    width: 575px;
     -webkit-transform: translateX(-210px);
             transform: translateX(-210px);
   }
