--- a/static/styles/scss/_responsive.scss
+++ b/static/styles/scss/_responsive.scss
@@ -80,7 +80,7 @@
 
         &--greeting {
             height: 55px;
-            width: 85%;
+            width: 90%;
             margin-bottom: 1rem;
 
             &--hello {
@@ -229,7 +229,7 @@
         padding: 20% 15% 10% 15%;
 
         &--greeting {
-            width: 90%;
+            width: 95%;
             margin-bottom: 1.5rem;
 
             &--hello {
@@ -497,7 +497,7 @@
         padding: 10% 15%;
 
         &--greeting {
-            width: 60%;
+            width: 65%;
             transform: translateX(-100px);
 
             &--hello {
@@ -653,7 +653,7 @@
 
     .about {
         &--greeting {
-            width: 550px;
+            width: 575px;
             transform: translateX(-210px);
         }
 
