--- a/static/styles/scss/main.scss
+++ b/static/styles/scss/main.scss
@@ -104,7 +104,6 @@
     &--greeting {
         display: flex;
         align-items: baseline;
-        width: 80%;
         height: 50px;
 
         &--hello {
